2018-11-06  Roman Bolshakov <r.bolshakov@yadro.com>

	* mach-o.h (bfd_mach_o_version_min_command): Don't split version into
	a few fields.
	* mach-o.c (bfd_mach_o_read_version_min): Don't split version into a
	few fields.

2018-11-06  Romain Margheriti  <lilrom13@gmail.com>

	PR 23742
	* mach-o.c (bfd_mach_o_read_command): Accept and ignore
	BFD_MACH_O_LC_LINKER_OPTIONS and BFD_MACH_O_LC_BUILD_VERSION
	commands.

2018-11-02  Alan Modra  <amodra@gmail.com>

	PR 23850
	* elf.c (bfd_section_from_shdr): Treat SHF_ALLOC SHT_REL* sections
	in an executable or shared library as normal sections.

2018-10-31  Renlin Li  <renlin.li@arm.com>

	* elfnn-aarch64.c (elfNN_aarch64_check_relocs): Don't create got
	section for Local Exec TLS model.

2018-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/23818
	* elflink.c (_bfd_elf_link_assign_sym_version): Hide symbols
	defined in discarded input sections.

2018-10-24  Alan Modra  <amodra@gmail.com>

	* elf32-arm.c (elf32_arm_size_stubs): Ignore as-needed libs that
	were not needed.

2018-10-23  Alan Modra  <amodra@gmail.com>

	PR 23806
	* merge.c (_bfd_add_merge_section): Don't attempt to merge
	sections with ridiculously large alignments.

2018-10-23  Alan Modra  <amodra@gmail.com>

	PR 23805
	* elflink.c (elf_link_input_bfd): Don't segfault on finding
	STT_TLS symbols without any TLS sections.  Instead, change the
	symbol type to STT_NOTYPE.

2018-10-23  Alan Modra  <amodra@gmail.com>

	PR 23804
	* merge.c (_bfd_add_merge_section): Don't attempt to merge
	sections where size is not a multiple of entsize.

2018-10-20  Alan Modra  <amodra@gmail.com>

	PR 23788
	* elf.c (section_match): Don't require a size match for SHT_SYMTAB
	or SHT_STRTAB.

2018-10-17  Alan Modra  <amodra@gmail.com>

	PR 23653
	* elflink.c (_bfd_elf_link_create_dynstrtab): Match elf_object_id
	too when choosing dynobj.

2018-10-16  Alan Modra  <amodra@gmail.com>

	* peXXigen.c (_bfd_XX_bfd_copy_private_bfd_data_common): Simplify
	PE_DEBUG_DATA size checks.
